networkpolicy/allow_network_policy_corredor_sala.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-network-policy-sala
  namespace: sala
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: corredor
        podSelector:
          matchLabels:
            app: corredor
