networkpolicy/deny_network_policy_banheiro.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: banheiro
spec:
  podSelector: {}
  policyTypes:
    - Ingress
