networkpolicy/deny_network_policy_corredor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: corredor
spec:
  podSelector: {}
  policyTypes:
    - Ingress
