networkpolicy/deny_network_policy_quarto.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: quarto
spec:
  podSelector: {}
  policyTypes:
    - Ingress
