networkpolicy/deny_network_policy_sala.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: sala
spec:
  podSelector: {}
  policyTypes:
    - Ingress
